使用 Colaboratory 建立

--- a/「0316作業_ipynb」的副本.ipynb
+++ b/「0316作業_ipynb」的副本.ipynb
@@ -394,39 +394,40 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 301
+          "base_uri": "https://localhost:8080/"
         },
         "id": "MAHJeby6adnb",
-        "outputId": "4d23f9ac-7d1b-4e79-b1a1-6804e1417eca"
+        "outputId": "0192185a-4b52-4c2c-814e-b6b9c2f78ae6"
       },
       "source": [
-        "歇業商店 <-jsonlite::fromJSON(\"11002.csv\")\r\n",
+        "歇業商店<- read.csv(\"11002.csv\")\r\n",
         "str(歇業商店)"
       ],
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Warning message:\n",
-            "“JSON string contains (illegal) UTF8 byte-order-mark!”\n"
+            "'data.frame':\t183 obs. of  4 variables:\n",
+            " $ 歇業核准日期: int  1100202 1100225 1100201 1100209 1100204 1100224 1100223 1100208 1100208 1100224 ...\n",
+            " $ 統一編號    : int  6373625 6432461 6434974 6547127 6601199 6605358 6647126 8438928 8475227 9014080 ...\n",
+            " $ 商業名稱    : chr  \"金積成行\" \"利承工作所\" \"虎山書苑\" \"祥益汽材邦浦行\" ...\n",
+            " $ 商業地址    : chr  \"臺南市中西區天后里西門路2段308號1樓\" \"臺南市北區安民里海安路3段32巷7號\" \"臺南市東區東門里慶東街103號1樓\" \"臺南市六甲區甲南里中正路244號\" ...\n"
           ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "error",
-          "ename": "ERROR",
-          "evalue": "ignored",
-          "traceback": [
-            "Error in parse_con(txt, bigint_as_char): lexical error: invalid char in json text.\n                                       歇業核准日期,統一編號\n                     (right here) ------^\n\nTraceback:\n",
-            "1. jsonlite::fromJSON(\"11002.csv\")",
-            "2. parse_and_simplify(txt = txt, simplifyVector = simplifyVector, \n .     simplifyDataFrame = simplifyDataFrame, simplifyMatrix = simplifyMatrix, \n .     flatten = flatten, ...)",
-            "3. parseJSON(txt, bigint_as_char)",
-            "4. parse_con(txt, bigint_as_char)"
-          ]
+          "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BTQ3SAFhcWWy"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
